<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button
	    android:id="@+id/btn_monday"
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/monday_short" />
	
	<Button
	    android:id="@+id/btn_tuesday"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/tuesday_short" />
	
	<Button
	    android:id="@+id/btn_wednesday"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/wednesday_short" />
	
	<Button
	    android:id="@+id/btn_thursday"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/thursday_short" />
	
	<Button
	    android:id="@+id/btn_friday"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/friday_short" />
	
	<Button
	    android:id="@+id/btn_saturday"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/saturday_short" />
</LinearLayout>
