<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LogInScreen" >

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName" />
    
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />
    
    <LinearLayout
        android:id="@+id/ll_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
       	<Spinner
       	    android:id="@+id/serverSelect"
       	    android:layout_width="match_parent"
       	    android:layout_height="wrap_content" />
        
    </LinearLayout>
  	    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <CheckBox
        	android:id="@+id/chb_rememberMe"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/rememberMe" />
    
    	<Button
        	android:id="@+id/btn_logIn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/logIn"
        	android:onClick="logIn" />
    </LinearLayout>

</LinearLayout>
