<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <Button
	    	android:id="@+id/btn_monday"
	    	android:layout_width="wrap_content"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/monday_short" />
	
		<Button
	    	android:id="@+id/btn_tuesday"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/tuesday_short" />
	
		<Button
	    	android:id="@+id/btn_wednesday"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/wednesday_short" />
	
		<Button
	    	android:id="@+id/btn_thursday"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/thursday_short" />
	
		<Button
	    	android:id="@+id/btn_friday"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/friday_short" />
	
		<Button
	    	android:id="@+id/btn_saturday"
	    	android:layout_width="match_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="1"
	    	android:text="@string/saturday_short" />"
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:layout_marginLeft="5dp"
	    android:layout_marginTop="5dp"
	   	android:orientation="vertical" >
		
		<TextView
		    android:id="@+id/tv_dayOfWeek"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="24sp"
		  	android:gravity="center" />
		
		<TextView
		    android:id="@+id/tv_day"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="12sp"
		    android:gravity="center" />
		
		<ScrollView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
			
			<LinearLayout
			    android:id="@+id/ll_schedule"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginTop="5dp"
		    	android:weightSum="2"
		    	android:orientation="horizontal" >
		    	
			    <ProgressBar
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center" />
			</LinearLayout>
		</ScrollView>
		
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
		    <Button
		        android:id="@+id/btn_prevWeek"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="Предыдущая неделя" />
		    
		    <Button
		        android:id="@+id/btn_nextWeek"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="Следующая неделя" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
