<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ScheduleScreen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/schedule"
            android:enabled="false" />
        
        <Button
            android:id="@+id/btn_schedule_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/news"
            android:enabled="true" />
        
        <Button
            android:id="@+id/btn_schedule_marks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/marks"
            android:enabled="true" />
      
    </LinearLayout>
    
   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false" >
        
      	<fragment
       		android:id="@+id/daySelect"
       	    android:name="com.netcity.DaySelect"
       	    android:layout_width="wrap_content"
       	    android:layout_height="match_parent" />
           	
       	<fragment
        	android:id="@+id/schList"
          	android:name="com.netcity.ScheduleList"
          	android:layout_marginLeft="10dp"
          	android:layout_marginTop="10dp"
          	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="1" />
        
    </LinearLayout>

</LinearLayout>
