<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MarksScreen"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
            android:id="@+id/btn_marks_schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/schedule"
            android:enabled="true" />
        
        <Button
            android:id="@+id/btn_marks_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/news"
            android:enabled="true" />
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/marks"
            android:enabled="false" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
        
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6" >
            
        	<LinearLayout
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content" >
        	    
        	    <LinearLayout
        	        android:layout_width="0dp"
        	        android:layout_height="wrap_content"
        	        android:layout_weight="1"
        	        android:orientation="vertical" >
        	        
        	        <TextView
        	            android:id="@+id/tv_month1"
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content"
        	            android:layout_gravity="center" />
        	        
        	        <TableLayout
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content" >
        	            
        	            <TableRow
        	                android:id="@+id/tr_month1"
        	                android:layout_width="wrap_content"
        	                android:layout_height="wrap_content" >
        	                
        	            </TableRow>"
        	        </TableLayout>
        	    </LinearLayout>
        	    
        	    <LinearLayout
        	        android:layout_width="0dp"
        	        android:layout_height="wrap_content"
        	        android:layout_weight="1"
        	        android:orientation="vertical" >
        	        
        	        <TextView
        	            android:id="@+id/tv_month2"
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content"
        	            android:layout_gravity="center" />
        	        
        	        <TableLayout
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content" >
        	            
        	            <TableRow
        	                android:id="@+id/tr_month2"
        	                android:layout_width="wrap_content"
        	                android:layout_height="wrap_content" >
        	                
        	            </TableRow>
        	        </TableLayout>
        	    </LinearLayout>
        	    
        	    <LinearLayout
        	        android:layout_width="0dp"
        	        android:layout_height="wrap_content"
        	        android:layout_weight="1"
        	        android:orientation="vertical" >
        	        
        	        <TextView
        	            android:id="@+id/tv_month3"
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content"
        	            android:layout_gravity="center" />
        	        
        	        <TableLayout
        	            android:layout_width="wrap_content"
        	            android:layout_height="wrap_content" >
        	            
        	            <TableRow
        	                android:id="@+id/tr_month3"
        	                android:layout_width="wrap_content"
        	                android:layout_height="wrap_content" >
        	                
        	            </TableRow>
        	        </TableLayout>
        	    </LinearLayout>
        	</LinearLayout>
        </HorizontalScrollView>
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
        	
            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" >
            	
        		<TableLayout
            		android:id="@+id/tl_lessons"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" >
            
        		</TableLayout>
        	</HorizontalScrollView>
        	
        	<HorizontalScrollView
        	    android:layout_width="0dp"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="6" >
        	    
        		<TableLayout
            		android:id="@+id/tl_marks"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" >
            
        		</TableLayout>
        	</HorizontalScrollView>
        	
        	<HorizontalScrollView
        	    android:layout_width="0dp"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="1" >
        	    
        		<TableLayout
            		android:id="@+id/tl_avg"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content" >
            
        		</TableLayout>
        	</HorizontalScrollView>
    	</LinearLayout>
    </ScrollView>
</LinearLayout>